--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ button {
 
 /* Pressed button style */
 button.pressed {
-    background-color: navy;
+    background-color: skyblue;
     color: white;
 }
 
