--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,3 +1,4 @@
+
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
@@ -29,7 +30,7 @@ header {
 header h1 {
     margin: 0;
     text-align: left; /* Align the title text to the left */
-    font-family: 'Lucida Console', 'Courier New', Courier, monospace; /* Set the font to Lucida Console */
+    font-family: sans-serif;
     flex-grow: 1; /* Allows the title to take up remaining space */
     margin-right: 100px; /* Move the title 100px from the right */
     font-size: 40px;
