--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,8 @@ nav ul li a {
     text-align: center;
     padding: 14px 20px;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 nav ul li a:hover {
