--- a/styles.css
+++ b/styles.css
@@ -295,3 +295,16 @@ button:hover {
 #sepsis-criteria ul {
     margin-left: 20px;
 }
+
+button.blue-toggle {
+  background-color: #87ceeb;
+  color: white;
+  border: 2px solid #000080;
+}
+
+button.blue-toggle.pressed {
+  background-color: #000080;
+  color: white;
+  border: 2px solid #000080;
+}
+
